--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,9 @@ nav{
     text-transform: lowercase;;
 }
 
-#navbar-links li a:active {
+#active{
   border-bottom: 1px solid black;
+  background-color: transparent;
 }
 
 /*need help with decorating the active link*/
@@ -73,7 +74,7 @@ html, body, .content-container {
 }
 
 body:not(#home) {
-  overflow:hidden !important;
+  overflow:hidden;
 }
 .content-container{
   display: flex;
@@ -87,6 +88,7 @@ body:not(#home) {
     position:relative;
     padding-top: 50px;
     min-height: 100%;
+    padding-bottom:30px;
 }
 
 .pimg-border{
@@ -123,6 +125,10 @@ body:not(#home) {
   }
   #navbar-links > li > a {
     color: black;
+  }
+  body{
+    overflow: scroll !important;
+    background-image: none;
   }
 }
 
