--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,16 @@ h3 {
 p {
     font-size: 15px;
     text-align: justify;
-    margin: 10px 60px;
     font-family: 'Roboto', sans-serif;
+}
+
+.text-container{
+  margin: 60px 60px;
+
+}
+
+#loading{
+  margin: 120px 0 80px;
 }
 
 #header {
@@ -73,7 +81,7 @@ html, body, .content-container {
   /*min-height: 100%;*/
 }
 
-body:not(#home) {
+body{
   overflow:hidden;
 }
 .content-container{
