--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,45 @@ body {
     background-size: cover;
 }
 
+.gallery > a {
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+
+.gallery img{
+    max-width: 300px;
+    display: block;
+    margin: 0 auto;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #fff;
+}
+
+.gallery:hover .overlay {
+    opacity: .6;
+}
+
+.text {
+    color: black;
+    font-size: 20px;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
 
 h2 {
     font-family: 'Fjalla One', sans-serif;
@@ -64,21 +103,17 @@ nav {
 }
 
 .text-container {
-    margin: 60px 60px;
+    margin: 20px 60px;
 }
-
-/*.flor {
-    display: inline-block;
-    height: 75px;
-    /*padding: 0 15px;
-} */
 
 svg {
   height:80px;
 }
+
 .brand-fill {
   fill:white;
 }
+
 .flor:hover .brand-fill {
   fill:black;
 }
@@ -98,10 +133,6 @@ svg {
     display: block;
     max-height: 200px;
     margin: 20px auto 20px;
-}
-
-.img-portfolio {
-    padding: 15px;
 }
 
 .footer {
