Fixed projects section to make more explicit

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -39,15 +39,55 @@ p{
 	margin: 15px auto 15px;
 }
 
-.gallery{
-	display: block;
-}
+// .gallery{
+// 	position: absolute;
+// }
 
 .gallery img{
 	display: block;
 	max-height: 200px;
-	margin: 25px auto;
+	left: 0;
+	right: 0;
 }
+
+
+#coffeebabe{
+	position: absolute;
+	margin: 25px 0;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: white;
+  padding: 0;
+}
+
+.gallery :hover .overlay {
+  opacity: 0.75;
+}
+
+.text {
+  color: black;
+  font-size: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -200%);
+  width: 100%;
+  text-align: center;
+}
+
+
 
 .footer{
 	display: block;
